# odctl

./: .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml
.github/: renovate.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-deps.yml  build-platform-images.yml  ci.yml  e2e-test.yml  pipeline.yml  publish-cli.yml  publish.yml
image/: diagram.drawio  diagram1.drawio  diagram2.drawio
resources/: compose-analytics.yml  compose-base.yml  compose-deps.yml  compose-flink.yml  compose-kafka.yml  compose-metadata.yml  compose-mlops.yml  compose-spark.yml  compose-store.yml  registry.yaml
resources/clickhouse/: users.xml
resources/docker/airflow/: Dockerfile
resources/docker/feast/: Dockerfile
resources/docker/jupyter/: Dockerfile
resources/docker/spark/: Dockerfile
resources/lakekeeper/: warehouse.json
resources/postgres/: 01-init-databases.sh
resources/seaweed/: s3.json
resources/spark/: log4j2.properties
resources/trino/catalog/: clickhouse.properties  postgres.properties
src/dml/: config.py  docker.py  main.py  planner.py  registry.py  ui.py  workspace.py
src/dml/resources/: compose-analytics.yml  compose-base.yml  compose-deps.yml  compose-flink.yml  compose-infra.yml  compose-kafka.yml  compose-metadata.yml  compose-mlops.yml  compose-obsv.yml  compose-orch.yml  compose-spark.yml  compose-store.yml  registry.yaml  registry.yml
src/dml/resources/clickhouse/: config.xml  init.sql  macros-1.xml  macros-11.xml  macros-12.xml  macros-2.xml  macros-21.xml  macros-22.xml  users.xml
src/dml/resources/docker/airflow/: Dockerfile
src/dml/resources/docker/feast/: Dockerfile
src/dml/resources/docker/jupyter/: Dockerfile
src/dml/resources/docker/mlflow/: Dockerfile
src/dml/resources/docker/pyiceberg/: Dockerfile
src/dml/resources/docker/ray-mlops/: Dockerfile
src/dml/resources/docker/spark/: Dockerfile
src/dml/resources/feast/: feature_store.yml
src/dml/resources/grafana/: prometheus.yml
src/dml/resources/marquez/: marquez.yml
src/dml/resources/mlops/serving/: lightgbm_inference.py.example  vector_search.py.example
src/dml/resources/postgres/: 01-init-databases.sh
src/dml/resources/prometheus/: prometheus.yml
src/dml/resources/spark/: spark-defaults.conf
src/dml/resources/trino/catalog/: iceberg.properties
src/odctl/: config.py  docker.py  main.py  planner.py  registry.py  ui.py  workspace.py
src/odctl/resources/: compose-analytics.yml  compose-deps.yml  compose-flink.yml  compose-infra.yml  compose-kafka.yml  compose-metadata.yml  compose-mlops.yml  compose-obsv.yml  compose-orch.yml  compose-spark.yml  compose-store.yml  compose-wrenai.yml  registry.yml
src/odctl/resources/clickhouse/: config.xml  init.sql  keeper_config.xml  macros-11.xml  macros-12.xml  macros-21.xml  macros-22.xml  users.xml
src/odctl/resources/docker/airflow/: Dockerfile
src/odctl/resources/docker/pyiceberg/: Dockerfile
src/odctl/resources/docker/ray-mlops/: Dockerfile
src/odctl/resources/docker/spark/: Dockerfile
src/odctl/resources/flink/: flink1-conf.yml
src/odctl/resources/grafana/: prometheus.yml
src/odctl/resources/mlops/serving/: lightgbm_inference.py.example
src/odctl/resources/prometheus/: alertmanager.yml  prometheus.yml
src/odctl/resources/seaweed/: s3.json
src/odctl/resources/trino/catalog/: clickhouse.properties  postgres.properties  valkey.properties
tests/: conftest.py  test_cli.py  test_cli_extended.py  test_config.py  test_docker.py  test_planner.py  test_registry.py  test_workspace.py  test_wren.py
