[project]
name = "dml-cli"
version = "0.0.1"
description = "Orchestrator for the Open DataML Stack"
readme = "README.md"
authors = [
    { name = "Jaehyeon Kim", email = "dottami@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pyyaml>=6.0.1",
    "python-on-whales>=0.70.0"
]

[project.scripts]
dml = "dml.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dml"]
